fixed workflow
fixed deprecation