@@ -25,6 +25,7 @@ import org.slf4j.LoggerFactory;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
@@ -109,8 +110,8 @@ public class PluginLoader {
         List<ValidatorInterface> plugs = new ArrayList<ValidatorInterface>(pluggables.size());
         for (Class<ValidatorInterface> plug : pluggables) {
             try {
-                plugs.add(plug.newInstance());
-            } catch (InstantiationException e) {
+                plugs.add(plug.getDeclaredConstructor().newInstance());
+            } catch (InstantiationException | NoSuchMethodException | InvocationTargetException e) {
                 LOG.info("Can't instantiate plugin: " + plug.getName());
                 throw new ValidationWarning("Can't instantiate plugin: " + plug.getName(), e);
             } catch (IllegalAccessException e) {
